errors
cgero88@raspberrypi:~ $ python3 UnifiedTest.py
  File "/home/cgero88/UnifiedTest.py", line 105
    cv2.circle(frame, (icon_x + icon_size//2, icon_y + icon_size//2), icon_size//4, (255, 255, 255), 1))
                                                                                                       ^
SyntaxError: unmatched ')'
